--- a/layouts/contact/contact.html
+++ b/layouts/contact/contact.html
@@ -21,7 +21,7 @@
         <li><strong>Email: </strong><a href="mailto:{{ .Site.Data.contact.email }}">
             {{ .Site.Data.contact.email }}</a></li>
         {{ if .Site.Data.contact.address }}
-        <li style="white-space: pre-wrap;"><strong>Address: </strong><br>{{ .Site.Data.contact.address }}</li>
+        <li style="white-space: pre-wrap;"><strong>Located in </strong><br>{{ .Site.Data.contact.address }}</li>
         {{ end }}
       </ul>
       <h4 class="mt-4">Business Hours</h4>
