--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -17,7 +17,7 @@ $grid-gutter-width: 20px;
 
 $white: #ffffff;
 $black: #000000;
-$primary: #495057;
+$primary: #1c3ed3;
 $secondary: #43454d;
 
 // Links
@@ -27,9 +27,9 @@ $link-hover-color: lighten($primary, 20%);
 $link-hover-decoration: underline;
 
 // Fonts
-$font-family-base: 'Helvetica Neue', Arial, sans-serif,
+$font-family-base: 'Open Sans', 'Helvetica Neue', Arial, sans-serif,
   -apple-system;
-$font-family-heading: 'Helvetica Neue', Arial, sans-serif, -apple-system;
+$font-family-heading: 'Lato', 'Helvetica Neue', Arial, sans-serif, -apple-system;
 $font-size-base: 1rem; // Assumes the browser default, typically `16px`
 $font-weight-thin: 200;
 $font-weight-light: 300;
