--- a/assets/scss/_bootstrap-variables.scss
+++ b/assets/scss/_bootstrap-variables.scss
@@ -35,6 +35,7 @@ $font-weight-thin: 200;
 $font-weight-light: 300;
 $font-weight-normal: 400;
 $font-weight-bold: 700;
+$font-color: #DD5825;
 $font-weight-base: $font-weight-normal;
 $line-height-base: 1.6;
 
