--- a/assets/scss/components/_hero-image.scss
+++ b/assets/scss/components/_hero-image.scss
@@ -30,7 +30,7 @@
     }
     h2 {
       font-size: 2.2rem;
-      color #ACACAC;
+      color: #ACACAC;
       @include media-breakpoint-up(md) {
         font-size: 2.4rem;
       }
